[tool.poetry]
name = "maize"
version = "0.3.13"
description = "一个强大易用的爬虫框架"
authors = ["seehar <seehar@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://seehar.github.io/maize"
repository = "https://github.com/seehar/maize"
documentation = "https://seehar.github.io/maize"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
parsel = "^1.8.1"
aiohttp = "^3.11.11"
httpx = "^0.28.1"
ujson = "^5.9.0"
aiomysql = {version = "^0.2.0", optional = true}
playwright = {version = "1.50.0", optional = true}
patchright = {version = "1.50.0", optional = true}
redis = {version = "^5.2.1", optional = true}
pydantic = "^2.12.0"
pydantic-settings = "^2.11.0"


[tool.poetry.extras]
rpa = ["playwright", "patchright"]
mysql = ["aiomysql"]
redis = ["redis"]


[tool.poetry.group.dev.dependencies]
black = "23.12.1"
isort = "5.13.2"
pre-commit = ">=3.5.0"


[tool.poetry.group.test.dependencies]
pytest-asyncio = "0.15.1"
pytest-cov = "4.1.0"
pytest = "7.4.0"
loguru = "0.5.3"
nox = "^2024.3.2"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
maize = "maize.command.maize_command:cli"


[tool.black]
line-length = 120
