[project]
name = "maize"
version = "0.3.13"
description = "一个强大易用的爬虫框架"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [
    { name = "seehar", email = "seehar@qq.com" }
]
homepage = "https://seehar.github.io/maize"
repository = "https://github.com/seehar/maize"
documentation = "https://seehar.github.io/maize"

dependencies = [
    "parsel>=1.8.1",
    "aiohttp>=3.11.11",
    "httpx>=0.28.1",
    "ujson>=5.9.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
]

[project.optional-dependencies]
mysql = ["aiomysql>=0.2.0"]
rpa = [
    "playwright==1.50.0",
    "patchright==1.50.0",
]
redis = ["redis>=5.2.1"]

[project.scripts]
maize = "maize.command.maize_command:cli"

[dependency-groups]
dev = [
    "black==24.3.0",
    "isort==7.0.0",
    "pre-commit>=3.5.0",
    "aiomysql>=0.2.0",
    "playwright==1.50.0",
    "patchright==1.50.0",
    "redis>=5.2.1"
]

test = [
    "pytest-asyncio==0.15.1",
    "pytest-cov==4.1.0",
    "pytest==7.4.0",
    "loguru==0.5.3",
    "nox>=2024.3.2",
]

docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.4",
    "mkdocs-minify-plugin>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
